5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1674_1872.log
== TEST (2019-05-02 00:33:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q3"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo X"
elif(x>0)or(x<0) and(y==0):
	c= "eixo Y"
else: 
	c= "Origem"
print(c)
-- OUTPUT:
Q3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:33:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q3"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo X"
elif(x>0)or(x<0) and(y==0):
	c= "eixo Y"
else: 
	c= "Origem"
print(c)
-- OUTPUT:
Q3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:35:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q3"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo Y"
elif(x>0)or(x<0) and(y==0):
	c= "Eixo X"
else: 
	c= "Origem"
print(c)
-- OUTPUT:
Q3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:35:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q3"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo Y"
elif(x>0)or(x<0) and(y==0):
	c= "Eixo X"
else: 
	c= "Origem"
print(c)
-- EXECUTION TIME:
0.152975
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q3
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:40:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q4"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo Y"
elif(x>0)or(x<0) and(y==0):
	c= "Eixo X"
elif(x=y=0):
	c= "Origem"
else: 
	c= "invalido"
print(c)
-- ERROR:
File "XXXX", line 17
    elif(x=y=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 00:40:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q4"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo Y"
elif(x>0)or(x<0) and(y==0):
	c= "Eixo X"
elif(x==y==0):
	c= "Origem"
else: 
	c= "invalido"
print(c)
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:40:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas de x: "))
y = float(input("coordenadas de y: "))

if (x>0) and(y>0):
	c= "Q1"
elif(x<0)and(y>0):
	c= "Q2"
elif(x<0)and(y<0):
	c = "Q3"
elif(x>0)and(y<0):
	c= "Q4"
elif(y>0) or(y<0) and(x==0):
	c= "Eixo Y"
elif(x>0)or(x<0) and(y==0):
	c= "Eixo X"
elif(x==y==0):
	c= "Origem"
else: 
	c= "invalido"
print(c)
-- EXECUTION TIME:
0.183047
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
